# applied-data-science-lucasgarces

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
case-studies/bcgx-powerco/: README.md
case-studies/bcgx-powerco/notebooks/: Task2-eda_starter.ipynb  task3-feature_engineering.ipynb
src/applied_data_science/: __init__.py
